# poll-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
prompts/: x_poll_rules.txt
src/: agent.py  config.py  main.py  run.py  runner.py  service.py
src/poll_agent/: __init__.py  agent.py  config.py  lambda_handler.py  main.py  monitoring.py
src/poll_agent/sub_agents/: publish_agent.py  tg_agent.py  x_agent.py
src/poll_agent/tools/: fetch_recent_polls.py  grok_x_search.py  push_chain.py  push_x.py  telegram.py  utils.py
src/sub_agents/: __init__.py  tg_agent.py  x_agent.py
src/tg_agent/: __init__.py  agent.py
src/tools/: grok_x_search.py  telegram.py  utils.py
src/x_agent/: __init__.py  agent.py
tests/: test_config.py
